<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/colorAccent">
    <TextView
            android:text="@string/text_grados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_grados"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="100dp"
            android:textSize="72sp"
            android:textColor="@color/colorText"
    />

    <TextView
            android:text="@string/text_ciudad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_ciudad"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="-100dp"
            android:textSize="30sp"
            android:layout_below="@+id/tv_estatus"
            android:textColor="@color/colorText"
    />

    <TextView
            android:text="@string/text_estatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_estatus"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="100dp"
            android:textSize="24sp"
            android:layout_below="@+id/tv_grados"
            android:textColor="@color/colorText"
        />

</RelativeLayout>